--- a/public/src/styles/base/_base.scss
+++ b/public/src/styles/base/_base.scss
@@ -6,6 +6,8 @@ html{
 body {
     font-family: Helvetica, Arial, sans-serif;
     font-size: $m-size;
+    font-size: $m-size;
+    line-height: 1.6;
 }
 
 button{
@@ -14,5 +16,9 @@ button{
 }
 button:disabled{
     cursor:default;
+}
+
+.is-active {
+    font-weight: bold;
 }
 
