--- a/public/src/styles/base/_settings.scss
+++ b/public/src/styles/base/_settings.scss
@@ -1,5 +1,14 @@
 //Color
+//Colors
+$red: #FF5E5B;
+$dark-grey: #2C363F;
+$blue: #253C78;
+$light-gray: #f7f7f7;
+$grey: #666;
+$dark-blue: #253C78;
 
+//Font Sizes
+$font-size-large: 1.8rem;
 
 //Spacing
 $s-size: 1.2rem;
