--- a/public/src/styles/styles.scss
+++ b/public/src/styles/styles.scss
@@ -1,10 +1,13 @@
 
 @import './base/settings';
 @import './base/base';
-// @import './components/button';
-// @import './components/container';
-// @import './components/header';
-// @import './components/widget';
-// @import './components/option';
-// @import './components/add-option';
-// @import './components/modal';
+@import './components/button';
+@import './components/content-container';
+@import './components/header';
+@import './components/page-header';
+@import './components/inputs';
+@import './components/form';
+@import './components/visibility';
+@import './components/list';
+@import './components/input-group';
+ 
